--- a/src/app/views/navbar/navbar.component.html
+++ b/src/app/views/navbar/navbar.component.html
@@ -1,7 +1,8 @@
-<nav class="navbar navbar-light bg-white">
+<nav class="navbar navbar-light bg-white border-bottom border-light">
   <div class="container">
     <a class="navbar-brand" href="">
       <img src="./assets/sique-gesso-logo.png" alt="Sique Gesso" height="50">
     </a>
+    <p><span class="fw-bold">Michael,</span> seja bem vindo!</p>
   </div>
 </nav>
