added ng bootstrap library (bug fix)

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,28 @@
-/* You can add global styles to this file, and also import other style files */
+// Paleta de cores
+$custom-primary: hsl(357, 85%, 51%);
+$custom-primary-dark: hsl(357, 65%, 40%);
+$custom-light: hsl(222, 36%, 95%);
+$custom-dark: hsl(300, 1%, 36%);
 
-.bg-sique-white {
-  background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(236,239,246,1) 100%);
+$primary: $custom-primary;
+
+.text-custom-dark {
+  color: $custom-dark;
 }
-
-@import "node_modules/bootstrap-icons/font/bootstrap-icons";
-@import "node_modules/bootstrap/scss/bootstrap.scss";
+a {
+  cursor: pointer;
+}
+a.text-custom-dark {
+  &:hover {
+    color: $custom-primary-dark;
+  }
+}
+/* You can add global styles to this file, and also import other style files */
+.bg-custom {
+  &-white {
+    background: linear-gradient(180deg, rgba(255, 255, 255, 1) 0%, rgba(236, 239, 246, 1) 75%);
+  }
+  &-light {
+    background-color: $custom-light;
+  }
+}
