--- a/src/app/sistema/home/home.component.html
+++ b/src/app/sistema/home/home.component.html
@@ -10,9 +10,9 @@
 
       <!-- Cards -->
       <div class="row m-0 my-5 p-0 justify-content-center align-items-center">
-        <a class="col-3 mx-3 my-3 p-4 text-center rounded-15 bg-white shadow" *ngFor="let card of cards;">
+        <a class="col-3 mx-3 my-3 p-4 text-center rounded-15 bg-white shadow-sm" *ngFor="let card of cards;">
           <i class="{{card.icon}} text-custom-dark" style="font-size: 4rem;"></i>
-          <h4 class="text-custom-dark fw-normal">{{card.nome}}</h4>
+          <h4 class="text-custom-dark fw-normal text-truncate">{{card.nome}}</h4>
         </a>
       </div>
       
