--- a/src/styles.scss
+++ b/src/styles.scss
@@ -33,25 +33,29 @@ $primary: $custom-primary;
 a {
   cursor: pointer;
   text-decoration: none !important;
-  &.col, &.col-1, &.col-2, &.col-3, &.col-4, &.col-5, &.col-6, &.col-7, &.col-8, &.col-9, &.col-10, &.col-11, &.col-12, &.col-auto {
+  &:hover {
+    filter: brightness(0.98) !important;
+    color: $custom-dark;
+  }
+  &.text-custom-dark {
     &:hover {
-      filter: brightness(.98);
+      color: $custom-dark;
+      filter: brightness(0.75) !important;
     }
   }
 }
-[cursor="pointer"]{
+[cursor="pointer"] {
   cursor: pointer;
 }
 
 .rounded {
   &-15 {
-  border-radius: 15px !important;
+    border-radius: 15px !important;
   }
   &-25 {
     border-radius: 25px !important;
   }
 }
-
 
 .bg-custom {
   &-white {
@@ -67,12 +71,6 @@ a {
 
 .text-custom-dark {
   color: $custom-dark;
-}
-a.text-custom-dark {
-  &:hover {
-    color: $custom-dark;
-    filter: brightness(.98);
-  }
 }
 
 .icon {
