--- a/src/app/sistema/usuarios-sistema/listar-usuarios-sistema/listar-usuarios-sistema.component.html
+++ b/src/app/sistema/usuarios-sistema/listar-usuarios-sistema/listar-usuarios-sistema.component.html
@@ -29,9 +29,9 @@
         
         <!-- Botão Filtro -->
         <div class="col-4 px-2 p-0 m-0">
-          <a class="rounded-15 py-2 px-4 text-custom-dark bg-white h-100 d-flex justify-content-between shadow-sm">
-            <h5 class="fw-normal my-auto text-truncate">Filtro</h5>
-            <i class="bi-funnel my-auto fs-4 p-0 m-0 fw-bold"></i>
+          <a class="rounded-15 py-2 px-4 bg-white h-100 d-flex justify-content-between shadow-sm">
+            <h5 class="fw-normal my-auto text-truncate text-custom-dark">Filtro</h5>
+            <i class="bi-funnel my-auto fs-4 p-0 m-0 fw-bold text-custom-dark"></i>
           </a>
         </div>
       </div>
