--- a/src/app/sistema/usuarios-sistema/listar-usuarios-sistema/listar-usuarios-sistema.component.html
+++ b/src/app/sistema/usuarios-sistema/listar-usuarios-sistema/listar-usuarios-sistema.component.html
@@ -41,10 +41,10 @@
         <div class="col-3">
           <h5 class="fw-bold">Usuário</h5>
         </div>
-        <div class="col-4">
+        <div class="col-5 col-lg-4">
           <h5 class="fw-bold">E-mail</h5>
         </div>
-        <div class="col-3">
+        <div class="col-2 col-lg-3">
           <h5 class="fw-bold">Permissão</h5>
         </div>
         <div class="col-2">
@@ -57,16 +57,16 @@
         <div class="col-3">
           <p>{{ usuario.nome }} {{ usuario.sobrenome }}</p>
         </div>
-        <div class="col-4">
+        <div class="col-5 col-lg-4">
           <p>{{ usuario.email }}</p>
         </div>
-        <div class="col-3">
+        <div class="col-2 col-lg-3">
           <p>{{ usuario.permissao }}</p>
         </div>
         <div class="col-2 text-end">
-          <i class="fs-5 bi-eye-fill icon-view p-2"></i>
-          <i class="fs-5 bi-pen-fill icon-edit p-2"></i>
-          <i class="fs-5 bi-trash-fill icon-delete p-2"></i>
+          <i class="fs-5 bi-eye-fill icon-view p-3" cursor="pointer"></i>
+          <i class="fs-5 bi-pen-fill icon-edit p-3" cursor="pointer"></i>
+          <i class="fs-5 bi-trash-fill icon-delete p-3" cursor="pointer"></i>
         </div>
       </div>
 
