--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,6 +28,10 @@ $primary: $custom-primary;
   cursor: pointer;
 }
 
+.avatar {
+  max-height: 150px;
+}
+
 .rounded {
   &-15 {
     border-radius: 15px !important;
@@ -49,7 +53,7 @@ $primary: $custom-primary;
   }
 }
 
-a {
+a, button {
   cursor: pointer;
   text-decoration: none !important;
   &:hover {
