--- a/src/app/views/navbar/navbar.component.html
+++ b/src/app/views/navbar/navbar.component.html
@@ -1,8 +1,32 @@
 <nav class="navbar navbar-light bg-white border-bottom border-light">
   <div class="container">
-    <a class="navbar-brand" href="">
+    <!-- Logotipo -->
+    <a class="navbar-brand" routerLink="/">
       <img src="./assets/sique-gesso-logo.png" alt="Sique Gesso" height="50">
     </a>
-    <p><span class="fw-bold">Michael,</span> seja bem vindo!</p>
+    <!-- Informações -->
+    <div class="my-auto text-custom-dark">
+
+      <!-- Notificações -->
+      <div class="btn-group">
+        <button type="button" class="btn btn-white bi-bell rounded-15 mx-3" data-bs-toggle="dropdown" aria-expanded="false"></button>
+        <ul class="dropdown-menu">
+          <li style="width: 300px;">
+            <a class="dropdown-item text-wrap small" href="#">
+              <p class="fw-bold m-0 text-custom-dark">Exemplo de título</p>
+              Aqui virá um texto da notificação
+            </a>
+          </li>
+          <li>
+            <hr class="dropdown-divider">
+          </li>
+          <li><a class="dropdown-item" href="#">Separated link</a></li>
+        </ul>
+      </div>
+
+      <!-- Textos e perfil -->
+      <span class="fw-bold">Ricardo Botega,</span> seja bem vindo!
+      <img class="rounded-circle ms-3" height="40" src="https://media-exp1.licdn.com/dms/image/C4D03AQHQ3svXJWM5xA/profile-displayphoto-shrink_800_800/0/1591462669794?e=1625702400&v=beta&t=N88eC5LZeyx9_K4vwAxiORXadkmdDoaPAVW2lr6iZRw" alt="Perfil">
+    </div>
   </div>
 </nav>
