--- a/src/app/sistema/usuarios-sistema/editar-usuario-sistema/editar-usuario-sistema.component.html
+++ b/src/app/sistema/usuarios-sistema/editar-usuario-sistema/editar-usuario-sistema.component.html
@@ -41,7 +41,7 @@
 
         <!-- Email -->
         <div class="col-4 px-2 pt-4 p-0 m-0">
-          <input class="form-control form-control-lg border-0 h-100 px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="Sobrenome">
+          <input class="form-control form-control-lg border-0 h-100 px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="Email">
         </div>
 
         <!-- Senha -->
