added back-button in listar-usuarios page

--- a/src/app/sistema/usuarios-sistema/listar-usuarios-sistema/listar-usuarios-sistema.component.html
+++ b/src/app/sistema/usuarios-sistema/listar-usuarios-sistema/listar-usuarios-sistema.component.html
@@ -8,8 +8,15 @@
     <!-- Lista de Usuários do Sistema -->
     <div class="container">
 
+      <!-- Botão de voltar -->
+      <div class="row m-0 justify-content-start mt-4">
+        <a class="col-1 p-1 bg-white rounded-15 text-center my-auto" routerLink="/sistema/">
+          <i class="bi-arrow-left fs-3 text-secondary"></i>
+        </a>
+      </div>
+
       <!-- Adicionar, Pesquisar e Filtro -->
-      <div class="row m-0 mt-5 justify-content-center">
+      <div class="row m-0 mt-4 justify-content-center">
 
         <!-- Botão Adicionar -->
         <div class="col-4 px-2 p-0 m-0">
