improved navbar notifications

--- a/src/app/views/navbar/navbar.component.html
+++ b/src/app/views/navbar/navbar.component.html
@@ -9,18 +9,20 @@
 
       <!-- Notificações -->
       <div class="btn-group">
-        <button type="button" class="btn btn-white bi-bell rounded-15 mx-3" data-bs-toggle="dropdown" aria-expanded="false"></button>
+        <button type="button" class="btn btn-white bi-bell px-2 py-1 rounded-15 mx-3 fs-4" data-bs-toggle="dropdown" aria-expanded="false">
+        </button>
+        <span class="badge rounded-pill bg-primary position-absolute bottom-50 start-50">2</span>
         <ul class="dropdown-menu">
           <li style="width: 300px;">
             <a class="dropdown-item text-wrap small" href="#">
-              <p class="fw-bold m-0 text-custom-dark">Exemplo de título</p>
-              Aqui virá um texto da notificação
+              <p class="fw-bold m-0">Exemplo de título</p>
+              Aqui virá um texto da notificação Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui error, odio vitae obcaecati non labore nesciunt in, exercitationem deserunt necessitatibus quasi officia pariatur ex animi itaque eligendi cum eos quas!
             </a>
           </li>
           <li>
             <hr class="dropdown-divider">
           </li>
-          <li><a class="dropdown-item" href="#">Separated link</a></li>
+          <li><a class="dropdown-item" href="#">Notificação separada</a></li>
         </ul>
       </div>
 
