--- a/src/app/views/navbar/navbar.component.html
+++ b/src/app/views/navbar/navbar.component.html
@@ -7,22 +7,45 @@
     <!-- Informações -->
     <div class="my-auto text-custom-dark">
 
-      <!-- Notificações -->
-      <div class="btn-group">
-        <button type="button" class="btn btn-white bi-bell px-2 py-1 rounded-15 mx-3 fs-4" data-bs-toggle="dropdown" aria-expanded="false">
+      <!-- Dropdown Notificações -->
+      <div ngbDropdown class="btn-group dropdown" autoClose="outside" display="dynamic" placement="bottom-center">
+        <!-- Botão do dropdown de notificações -->
+        <button ngbDropdownToggle type="button" id="btnNotificacoes" class="btn btn-white px-2 py-1 rounded-15 mx-3 fs-4">
+          <i class="bi-bell"></i>
         </button>
-        <span class="badge rounded-pill bg-primary position-absolute bottom-50 start-50">2</span>
-        <ul class="dropdown-menu">
-          <li style="width: 300px;">
-            <a class="dropdown-item text-wrap small" href="#">
-              <p class="fw-bold m-0">Exemplo de título</p>
-              Aqui virá um texto da notificação Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui error, odio vitae obcaecati non labore nesciunt in, exercitationem deserunt necessitatibus quasi officia pariatur ex animi itaque eligendi cum eos quas!
-            </a>
-          </li>
+        <!-- Badge da quantidade de notificações -->
+        <span *ngIf="notificacoes.length > 0" class="badge rounded-pill bg-primary position-absolute bottom-50 start-50">{{notificacoes.length}}</span>
+
+        <!-- DropdownMenu -->
+        <ul ngbDropdownMenu class="dropdown-menu rounded-15" aria-labelledby="btnNotificacoes">
+          <!-- Título Notificações -->
+          <li class="fw-bold px-3 pb-2 text-custom-dark">Notificações</li>
           <li>
-            <hr class="dropdown-divider">
+            <hr class="dropdown-divider m-0">
           </li>
-          <li><a class="dropdown-item" href="#">Notificação separada</a></li>
+
+          <!-- Se não houver notificações -->
+          <li *ngIf="notificacoes.length === 0" style="width: 350px;">
+            <p class="text-center mt-3 text-wrap text-custom-dark small">
+              Não há novas notificações.
+            </p>
+          </li>
+
+          <!-- Notificações -->
+          <li class="border-bottom d-flex" style="width: 350px;" *ngFor="let notificacao of notificacoes;">
+            <a class="dropdown-item py-2 px-3 text-wrap small" href="#">
+              <!-- <p class="fw-bold m-0">Exemplo de título</p> -->
+              {{ notificacao.texto }}
+            </a>
+            <!-- Sub dropdown -->
+            <div class="btn-group dropdown" ngbDropdown autoClose="true" display="dynamic" placement="bottom-center">
+              <button ngbDropdownToggle type="button" id="btnNotificacao{{notificacao.id}}" class="btn btn-white bi-three-dots-vertical px-2 align-self-center"></button>
+              <ul ngbDropdownMenu class="dropdown-menu" attr.aria-labelledby="btnNotificacao{{notificacao.id}}">
+                <li class="dropdown-item text-wrap small" cursor="pointer">Marcar como lida <i class="bi-check2"></i> </li>
+              </ul>
+            </div>
+
+          </li>
         </ul>
       </div>
 
