created cadastrar-colaborador page

--- a/src/app/sistema/rh/listar-colaboradores/listar-colaboradores.component.html
+++ b/src/app/sistema/rh/listar-colaboradores/listar-colaboradores.component.html
@@ -5,7 +5,7 @@
     <app-sidemenu></app-sidemenu>
   </div>
   <div class="col m-0 bg-custom-white">
-    <!-- Página home -->
+    <!-- Página -->
     <div class="container">
 
       <!-- Botão de voltar -->
@@ -15,12 +15,12 @@
         </a>
       </div>
 
-      <!-- Adicionar, Pesquisar e Filtro -->
+      <!-- Adicionar, Ativos e Inativos -->
       <div class="row m-0 mt-4 justify-content-center">
 
         <!-- Botão Adicionar -->
         <div class="col-4 px-2 p-0 m-0">
-          <a class="rounded-15 py-1 px-4 bg-custom-success h-100 d-flex justify-content-between shadow-sm">
+          <a class="rounded-15 py-1 px-4 bg-custom-success h-100 d-flex justify-content-between shadow-sm" routerLink="/sistema/rh/cadastrar">
             <h5 class="fw-normal my-auto text-truncate text-custom-dark ">Adicionar</h5>
             <i class="bi-plus my-auto fs-2 p-0 m-0 fw-bold text-custom-dark "></i>
           </a>
@@ -90,6 +90,6 @@
       </div>
 
     </div>
-    <!-- /Página home -->
+    <!-- /Página -->
   </div>
 </div>
