--- a/src/app/sistema/usuarios-sistema/listar-usuarios-sistema/listar-usuarios-sistema.component.html
+++ b/src/app/sistema/usuarios-sistema/listar-usuarios-sistema/listar-usuarios-sistema.component.html
@@ -1,7 +1,7 @@
 <app-navbar></app-navbar>
 
 <div class="row p-0 m-0">
-  <div class="col-auto m-0 p-0">
+  <div class="col-auto m-0 p-0 bg-custom-light">
     <app-sidemenu></app-sidemenu>
   </div>
   <div class="col m-0 bg-custom-white">
