added pedidos-realizados page

--- a/src/app/sistema/clientes/clientes.component.html
+++ b/src/app/sistema/clientes/clientes.component.html
@@ -42,6 +42,10 @@
         <app-avaliacao-credito></app-avaliacao-credito>
       </div>
 
+      <div *ngIf="clienteSection == 'pedidos'">
+        <app-pedidos-realizados></app-pedidos-realizados>
+      </div>
+
     </div>
     <!-- /Página -->
   </div>
