added resumo-financeiro page

--- a/src/app/sistema/clientes/clientes.component.html
+++ b/src/app/sistema/clientes/clientes.component.html
@@ -46,6 +46,10 @@
         <app-pedidos-realizados></app-pedidos-realizados>
       </div>
 
+      <div *ngIf="clienteSection == 'resumo'">
+        <app-resumo-financeiro></app-resumo-financeiro>
+      </div>
+
     </div>
     <!-- /Página -->
   </div>
