--- a/src/styles.scss
+++ b/src/styles.scss
@@ -87,13 +87,23 @@ button {
   }
 }
 
-.form-check-input {
+.form-switch .form-check-input {
   &:checked:focus {
     box-shadow: 0 0 0 0.25rem rgba($color: $success, $alpha: 0.5);
   }
   &:checked {
     background-color: $success;
     border-color: $success;
+  }
+}
+
+.form-check-input {
+  &:checked:focus {
+    box-shadow: 0 0 0 0.25rem rgba($color: $custom-dark, $alpha: 0.5);
+  }
+  &:checked {
+    background-color: $custom-dark;
+    border-color: $custom-dark;
   }
 }
 
