--- a/src/app/sistema/notificacoes/notificacoes.component.html
+++ b/src/app/sistema/notificacoes/notificacoes.component.html
@@ -4,8 +4,8 @@
   <div class="col-auto m-0 p-0 bg-custom-light">
     <app-sidemenu></app-sidemenu>
   </div>
-  <div class="col pt-5 m-0 bg-custom-white">
-    <!-- Página home -->
+  <div class="col py-5 m-0 bg-custom-white">
+    <!-- Página -->
     <div class="container">
 
       <div class="row mt-4 m-0 pb-4 border-bottom">
@@ -17,41 +17,31 @@
       <div class="row mt-4 m-0">
         <div class="col-12">
 
-          <!-- Accordion -->
+          <!-- Accordions -->
           <div class="accordion" id="notificacaoAccordion">
 
-            <!-- Por email -->
+            <!-- Accordion por email -->
             <div class="accordion-item rounded-15">
+              <!-- Título por Email -->
               <h2 class="accordion-header" id="porEmail">
                 <button class="accordion-button collapsed rounded-15" type="button" data-bs-toggle="collapse" data-bs-target="#porEmailCollapse" aria-expanded="false" aria-controls="porEmailCollapse">
                   <p class="fw-bold text-custom-dark">Por e-mail</p>
                 </button>
               </h2>
+
+              <!-- Collapse por email -->
               <div id="porEmailCollapse" class="accordion-collapse collapse" aria-labelledby="porEmail">
                 <div class="accordion-body">
-                  <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-                </div>
-              </div>
-            </div>
 
-            <!-- Na Sique Gesso -->
-            <div class="accordion-item mt-4 rounded-15">
-              <h2 class="accordion-header" id="naSique">
-                <button class="accordion-button collapsed rounded-15" type="button" data-bs-toggle="collapse" data-bs-target="#naSiqueCollapse" aria-expanded="false" aria-controls="naSiqueCollapse">
-                  <p class="fw-bold text-custom-dark">Na Sique Gesso</p>
-                </button>
-              </h2>
-              <div id="naSiqueCollapse" class="accordion-collapse collapse" aria-labelledby="naSique">
-                <div class="accordion-body">
-
-                  <div class="row py-3 m-0" *ngFor="let notificacao of notificacoes; let i = index">
+                  <!-- Linha de notificação -->
+                  <div class="row py-3 m-0" *ngFor="let notificacao of notificacoesEmail; let i = index">
                     <div class="col-3 px-2">
                       {{notificacao.nome}}
                     </div>
                     <div class="col-6 px-2 text-center">
                       <div class="form-check form-check-inline px-3" *ngFor="let tipo of notificacao.tipos; let i2 = index">
-                        <input class="form-check-input" type="checkbox" id="tipo{{i}}-{{i2}}" value="tipo{{i}}-{{i2}}">
-                        <label class="form-check-label" for="tipo{{i}}-{{i2}}">{{tipo.nome}}</label>
+                        <input class="form-check-input" type="checkbox" id="tipo{{notificacao.value}}-{{i}}-{{i2}}" value="tipo{{notificacao.value}}-{{i}}-{{i2}}">
+                        <label class="form-check-label" for="tipo{{notificacao.value}}-{{i}}-{{i2}}">{{tipo.nome}}</label>
                       </div>
                     </div>
                     <div class="col-3 px-4 d-flex align-items-end justify-content-end">
@@ -60,10 +50,53 @@
                       </div>
                     </div>
                   </div>
+                  <!-- /Linha de notificação -->
 
                 </div>
               </div>
+              <!-- /Collapse por email -->
             </div>
+            <!-- /Accordion por email -->
+
+            <!-- Accordion Na Sique Gesso -->
+            <div class="accordion-item mt-4 rounded-15">
+
+              <!-- Título Na Sique Gesso -->
+              <h2 class="accordion-header" id="naSique">
+                <button class="accordion-button collapsed rounded-15" type="button" data-bs-toggle="collapse" data-bs-target="#naSiqueCollapse" aria-expanded="false" aria-controls="naSiqueCollapse">
+                  <p class="fw-bold text-custom-dark">Na Sique Gesso</p>
+                </button>
+              </h2>
+
+              <!-- Collapse Na Sique -->
+              <div id="naSiqueCollapse" class="accordion-collapse collapse" aria-labelledby="naSique">
+                <div class="accordion-body">
+
+                  <!-- Linha de notificação -->
+                  <div class="row py-3 m-0" *ngFor="let notificacao of notificacoesSique; let i = index">
+                    <div class="col-3 px-2">
+                      {{notificacao.nome}}
+                    </div>
+                    <div class="col-6 px-2 text-center">
+                      <div class="form-check form-check-inline px-3" *ngFor="let tipo of notificacao.tipos; let i2 = index">
+                        <input class="form-check-input" type="checkbox" id="tipo{{notificacao.value}}-{{i}}-{{i2}}" value="tipo{{notificacao.value}}-{{i}}-{{i2}}">
+                        <label class="form-check-label" for="tipo{{notificacao.value}}-{{i}}-{{i2}}">{{tipo.nome}}</label>
+                      </div>
+                    </div>
+                    <div class="col-3 px-4 d-flex align-items-end justify-content-end">
+                      <div class="form-check form-switch">
+                        <input class="form-check-input pt-4 ps-5 border-light bg-custom-light" type="checkbox" [value]="notificacao.value">
+                      </div>
+                    </div>
+                  </div>
+                  <!-- /Linha de notificação -->
+
+                </div>
+              </div>
+              <!-- /Collapse Na Sique -->
+
+            </div>
+            <!-- /Accordion Na Sique -->
 
           </div>
           <!-- / Accordion -->
@@ -72,6 +105,6 @@
       </div>
 
     </div>
-    <!-- /Página home -->
+    <!-- /Página -->
   </div>
 </div>
