--- a/src/app/sistema/estoque/estoque.component.html
+++ b/src/app/sistema/estoque/estoque.component.html
@@ -39,6 +39,7 @@
       </div>
 
       <div *ngIf="estoqueSection == 'produtos'">
+        <app-produtos></app-produtos>
       </div>
 
       <div *ngIf="estoqueSection == 'Suprimentos'">
