--- a/src/app/sistema/estoque/produtos/produtos.component.html
+++ b/src/app/sistema/estoque/produtos/produtos.component.html
@@ -47,10 +47,10 @@
   <div class="col-2">
     <h5 class="fw-bold">Venda</h5>
   </div>
-  <div class="col-2">
+  <div class="col-1">
     <h5 class="fw-bold">Margem</h5>
   </div>
-  <div class="col">
+  <div class="col-2">
     <h5 class="fw-bold d-none">Ações</h5>
   </div>
 </div>
@@ -64,18 +64,18 @@
     <p>{{ produto.nome }}</p>
   </div>
   <div class="col-2">
-    <p>{{ produto.estoque }}</p>
+    <p>{{ produto.estoque }} un.</p>
   </div>
   <div class="col-2">
-    <p>{{ produto.custo }}</p>
+    <p>{{ produto.custo | currency:'BRL' }}</p>
   </div>
   <div class="col-2">
-    <p>{{ produto.venda }}</p>
+    <p>{{ produto.venda | currency:'BRL' }}</p>
   </div>
-  <div class="col-2">
+  <div class="col-1">
     <p>{{ produto.margem }}%</p>
   </div>
-  <div class="col text-end">
+  <div class="col-2 text-end">
     <i class="fs-5 bi-eye-fill icon-view p-3" cursor="pointer"></i>
     <i class="fs-5 bi-trash-fill icon-delete p-3" cursor="pointer"></i>
   </div>
