fix produtos page

--- a/src/app/sistema/estoque/produtos/produtos.component.html
+++ b/src/app/sistema/estoque/produtos/produtos.component.html
@@ -67,16 +67,16 @@
     <p>{{ produto.estoque }} un.</p>
   </div>
   <div class="col-2">
-    <p>{{ produto.custo | currency:'BRL' }}</p>
+    <p>{{ produto.custo | currency:'BRL' }} un.</p>
   </div>
   <div class="col-2">
-    <p>{{ produto.venda | currency:'BRL' }}</p>
+    <p>{{ produto.venda | currency:'BRL' }} un.</p>
   </div>
   <div class="col-1">
     <p>{{ produto.margem }}%</p>
   </div>
   <div class="col-2 text-end">
     <i class="fs-5 bi-eye-fill icon-view p-3" cursor="pointer"></i>
-    <i class="fs-5 bi-trash-fill icon-delete p-3" cursor="pointer"></i>
+    <i class="fs-5 bi-pen-fill icon-edit p-3" cursor="pointer"></i>
   </div>
 </div>
