added suprimentos page (estoque)

--- a/src/app/sistema/estoque/estoque.component.html
+++ b/src/app/sistema/estoque/estoque.component.html
@@ -42,7 +42,8 @@
         <app-produtos></app-produtos>
       </div>
 
-      <div *ngIf="estoqueSection == 'Suprimentos'">
+      <div *ngIf="estoqueSection == 'suprimentos'">
+        <app-suprimentos></app-suprimentos>
       </div>
 
       <div *ngIf="estoqueSection == 'estoque'">
