added estoque-produtos page

--- a/src/app/sistema/estoque/estoque.component.html
+++ b/src/app/sistema/estoque/estoque.component.html
@@ -47,6 +47,7 @@
       </div>
 
       <div *ngIf="estoqueSection == 'estoque'">
+        <app-estoque-produtos></app-estoque-produtos>
       </div>
 
     </div>
