added adicionar-fornecedores modal (estoque)

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -70,9 +70,14 @@
   min-height: 64px;
   max-height: 64px;
 }
+.h-limited-sm, input.form-control-lg, select.form-control-lg { 
+  min-height: 50px;
+  max-height: 50px;
+}
 
 a,
-button {
+button,
+label {
   cursor: pointer;
   text-decoration: none !important;
   &:hover {
