--- a/src/app/sistema/estoque/fornecedores/fornecedores.component.html
+++ b/src/app/sistema/estoque/fornecedores/fornecedores.component.html
@@ -23,8 +23,9 @@
     </a>
   </div>
 
+  <!-- Adicionar fornecedor -->
   <div class="col-1 px-2 p-0 m-0 text-center">
-    <a class="px-2 py-2">
+    <a class="px-2 py-2" data-bs-toggle="modal" data-bs-target="#adicionarFornecedor">
       <i class="bi-plus-square-fill icon-view my-auto fs-3 p-2 m-0 fw-bold text-custom-dark"></i>
     </a>
   </div>
@@ -62,3 +63,5 @@
     <i class="fs-5 bi-trash-fill icon-delete p-3" cursor="pointer"></i>
   </div>
 </div>
+
+<app-adicionar-fornecedores></app-adicionar-fornecedores>
