added adicionar-produtos modal (estoque)

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -70,7 +70,7 @@
   min-height: 64px;
   max-height: 64px;
 }
-.h-limited-sm, input.form-control-lg, select.form-control-lg { 
+.h-limited-sm { 
   min-height: 50px;
   max-height: 50px;
 }
