--- a/src/app/sistema/clientes/cadastrar-cliente/pessoa-fisica/pessoa-fisica.component.html
+++ b/src/app/sistema/clientes/cadastrar-cliente/pessoa-fisica/pessoa-fisica.component.html
@@ -4,49 +4,49 @@
 
   <!-- Nome -->
   <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
-    <input class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="Nome">
+    <input class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="Nome">
     <label class="ms-2 mt-3 small text-truncate text-custom-dark">Nome</label>
   </div>
 
   <!-- Sobrenome -->
   <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
-    <input class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="Sobrenome">
+    <input class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="Sobrenome">
     <label class="ms-2 mt-3 small text-truncate text-custom-dark">Sobrenome</label>
   </div>
 
   <!-- CPF -->
   <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
-    <input class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="CPF">
+    <input class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="CPF">
     <label class="ms-2 mt-3 small text-truncate text-custom-dark">CPF</label>
   </div>
 
   <!-- RG -->
   <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
-    <input class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="RG">
+    <input class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="RG">
     <label class="ms-2 mt-3 small text-truncate text-custom-dark">RG</label>
   </div>
 
   <!-- Celular -->
   <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
-    <input class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="Celular">
+    <input class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="Celular">
     <label class="ms-2 mt-3 small text-truncate text-custom-dark">Celular</label>
   </div>
 
   <!-- Telefone -->
   <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
-    <input class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="Telefone">
+    <input class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="Telefone">
     <label class="ms-2 mt-3 small text-truncate text-custom-dark">Telefone</label>
   </div>
 
   <!-- Data de nascimento -->
   <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
-    <input class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="date" placeholder="Data de nascimento" [max]="getDate()">
+    <input class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" type="date" placeholder="Data de nascimento" [max]="getDate()">
     <label class="ms-2 mt-3 small text-truncate text-custom-dark">Data de nascimento</label>
   </div>
 
   <!-- Email -->
   <div class="col-8 px-2 pt-4 p-0 m-0 form-floating">
-    <input class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="email" placeholder="Email">
+    <input class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" type="email" placeholder="Email">
     <label class="ms-2 mt-3 small text-truncate text-custom-dark">Email</label>
   </div>
 
@@ -58,49 +58,49 @@
 
   <!-- CEP -->
   <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
-    <input class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="CEP">
+    <input class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="CEP">
     <label class="ms-2 mt-3 small text-truncate text-custom-dark">CEP</label>
   </div>
 
   <!-- Logradouro -->
   <div class="col-5 px-2 pt-4 p-0 m-0 form-floating">
-    <input class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="Logradouro">
+    <input class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="Logradouro">
     <label class="ms-2 mt-3 small text-truncate text-custom-dark">Logradouro</label>
   </div>
 
   <!-- Número -->
   <div class="col-3 px-2 pt-4 p-0 m-0 form-floating">
-    <input class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="Número">
+    <input class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="Número">
     <label class="ms-2 mt-3 small text-truncate text-custom-dark">Número</label>
   </div>
 
   <!-- Complemento -->
   <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
-    <input class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="Complemento">
+    <input class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="Complemento">
     <label class="ms-2 mt-3 small text-truncate text-custom-dark">Complemento</label>
   </div>
 
   <!-- Bairro -->
   <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
-    <input class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="Bairro">
+    <input class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="Bairro">
     <label class="ms-2 mt-3 small text-truncate text-custom-dark">Bairro</label>
   </div>
 
   <!-- Cidade -->
   <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
-    <input class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="Cidade">
+    <input class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="Cidade">
     <label class="ms-2 mt-3 small text-truncate text-custom-dark">Cidade</label>
   </div>
 
   <!-- UF -->
   <div class="col-3 px-2 pt-4 p-0 m-0 form-floating">
-    <input class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="UF">
+    <input class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="UF">
     <label class="ms-2 mt-3 small text-truncate text-custom-dark">UF</label>
   </div>
 
   <!-- País -->
   <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
-    <input class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="País">
+    <input class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="País">
     <label class="ms-2 mt-3 small text-truncate text-custom-dark">País</label>
   </div>
 
@@ -122,13 +122,13 @@
 
   <!-- Código -->
   <div class="col-3 px-2 pt-4 p-0 m-0 form-floating">
-    <input class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="Código">
+    <input class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="Código">
     <label class="ms-2 mt-3 small text-truncate text-custom-dark">Código</label>
   </div>
 
   <!-- Nome do vendedor -->
   <div class="col-9 px-2 pt-4 p-0 m-0 form-floating">
-    <input class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="Nome do vendedor">
+    <input class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="Nome do vendedor">
     <label class="ms-2 mt-3 small text-truncate text-custom-dark">Nome do vendedor</label>
   </div>
 
@@ -139,7 +139,7 @@
 
   <!-- Botão Salvar -->
   <div class="col-4 d-grid px-2 p-0 m-0">
-    <button type="submit" class="btn rounded-15 py-3 px-4 bg-custom-success h-100 d-flex justify-content-between shadow-sm">
+    <button type="submit" class="btn rounded-15 py-3 px-4 bg-custom-success h-limited d-flex justify-content-between shadow-sm">
       <h5 class="fw-normal my-auto text-truncate text-custom-dark ">Salvar</h5>
     </button>
   </div>
