--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,7 @@
 
 @import "~bootstrap/scss/bootstrap";
 
+@import url("https://use.typekit.net/znc7gye.css");
 @font-face {
   font-family: montserrat;
   src: url("https://use.typekit.net/znc7gye.css");
