--- a/src/app/sistema/clientes/cadastrar-cliente/cadastrar-cliente.component.html
+++ b/src/app/sistema/clientes/cadastrar-cliente/cadastrar-cliente.component.html
@@ -1,38 +1,121 @@
-<!-- Pessoa Física, Jurídica -->
-<div class="row m-0 mt-4 justify-content-center">
+<form>
+  <!-- Pessoa Física, Jurídica -->
+  <div class="row m-0 mt-4 justify-content-center">
 
-  <!-- Botão Pessoa Física -->
-  <div class="col-4 px-2 p-0 m-0">
-    <a [class.bg-custom-success]="tipoPessoa == 'fisica'" class="rounded-15 py-1 px-4 h-limited d-flex justify-content-between shadow-sm" (click)="toggleTipoPessoa('fisica')">
-      <h5 class="fw-normal my-auto text-truncate text-custom-dark">Pessoa Física</h5>
-    </a>
-  </div>
-
-  <!-- Botão Pessoa Física -->
-  <div class="col-4 px-2 p-0 m-0">
-    <a [class.bg-custom-success]="tipoPessoa == 'juridica'" class="rounded-15 py-1 px-4 h-limited d-flex justify-content-between shadow-sm" (click)="toggleTipoPessoa('juridica')">
-      <h5 class="fw-normal my-auto text-truncate text-custom-dark">Pessoa Jurídica</h5>
-    </a>
-  </div>
-
-  <div class="col-4"></div>
-
-  <div class="col-6 py-3 d-flex align-items-end border-bottom">
-    <span class="fs-5 m-0">Código: XXXXXX</span>
-  </div>
-
-  <div class="col-6 py-3 d-flex border-bottom align-items-end justify-content-end">
-    <label class="form-check-label me-3 fs-5" for="desativado">{{ (desativadoCheckbox === true) ? 'Ativo' : 'Desativado' }}</label>
-    <div class="form-check form-switch">
-      <input class="form-check-input pt-4 ps-5 border-light bg-custom-light" type="checkbox" id="desativado" (click)="toggleDesativadoCheckbox()" [checked]="desativadoCheckbox === true">
+    <!-- Botão Pessoa Física -->
+    <div class="col-4 px-2 p-0 m-0">
+      <a [class.bg-custom-success]="tipoPessoa == 'fisica'" class="rounded-15 py-1 px-4 h-limited d-flex justify-content-between shadow-sm" (click)="toggleTipoPessoa('fisica')">
+        <h5 class="fw-normal my-auto text-truncate text-custom-dark">Pessoa Física</h5>
+      </a>
     </div>
+
+    <!-- Botão Pessoa Física -->
+    <div class="col-4 px-2 p-0 m-0">
+      <a [class.bg-custom-success]="tipoPessoa == 'juridica'" class="rounded-15 py-1 px-4 h-limited d-flex justify-content-between shadow-sm" (click)="toggleTipoPessoa('juridica')">
+        <h5 class="fw-normal my-auto text-truncate text-custom-dark">Pessoa Jurídica</h5>
+      </a>
+    </div>
+
+    <div class="col-4"></div>
+
+    <div class="col-6 py-3 d-flex align-items-end border-bottom">
+      <span class="fs-5 m-0">Código: XXXXXX</span>
+    </div>
+
+    <div class="col-6 py-3 d-flex border-bottom align-items-end justify-content-end">
+      <label class="form-check-label me-3 fs-5" for="desativado">{{ (desativadoCheckbox === true) ? 'Ativo' : 'Desativado' }}</label>
+      <div class="form-check form-switch">
+        <input class="form-check-input pt-4 ps-5 border-light bg-custom-light" type="checkbox" id="desativado" (click)="toggleDesativadoCheckbox()" [checked]="desativadoCheckbox === true">
+      </div>
+    </div>
+
   </div>
 
-</div>
+  <div *ngIf="tipoPessoa === 'fisica'">
+    <app-pessoa-fisica></app-pessoa-fisica>
+  </div>
+  <div *ngIf="tipoPessoa === 'juridica'">
+    <app-pessoa-juridica></app-pessoa-juridica>
+  </div>
 
-<div *ngIf="tipoPessoa === 'fisica'">
-  <app-pessoa-fisica></app-pessoa-fisica>
-</div>
-<div *ngIf="tipoPessoa === 'juridica'">
-  <app-pessoa-juridica></app-pessoa-juridica>
-</div>
+
+  <!-- Endereços -->
+  <div class="row pb-4 m-0 border-bottom" *ngFor="let endereco of enderecos; let i = index">
+
+    <!-- CEP -->
+    <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
+      <input class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="CEP">
+      <label class="ms-2 mt-3 small text-truncate text-custom-dark">CEP</label>
+    </div>
+
+    <!-- Logradouro -->
+    <div class="col-5 px-2 pt-4 p-0 m-0 form-floating">
+      <input class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="Logradouro">
+      <label class="ms-2 mt-3 small text-truncate text-custom-dark">Logradouro</label>
+    </div>
+
+    <!-- Número -->
+    <div class="col-3 px-2 pt-4 p-0 m-0 form-floating">
+      <input class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="Número">
+      <label class="ms-2 mt-3 small text-truncate text-custom-dark">Número</label>
+    </div>
+
+    <!-- Complemento -->
+    <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
+      <input class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="Complemento">
+      <label class="ms-2 mt-3 small text-truncate text-custom-dark">Complemento</label>
+    </div>
+
+    <!-- Bairro -->
+    <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
+      <input class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="Bairro">
+      <label class="ms-2 mt-3 small text-truncate text-custom-dark">Bairro</label>
+    </div>
+
+    <!-- Cidade -->
+    <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
+      <input class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="Cidade">
+      <label class="ms-2 mt-3 small text-truncate text-custom-dark">Cidade</label>
+    </div>
+
+    <!-- UF -->
+    <div class="col-3 px-2 pt-4 p-0 m-0 form-floating">
+      <input class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="UF">
+      <label class="ms-2 mt-3 small text-truncate text-custom-dark">UF</label>
+    </div>
+
+    <!-- País -->
+    <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
+      <input class="form-control form-control-lg h-100 px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="País">
+      <label class="ms-2 mt-3 small text-truncate text-custom-dark">País</label>
+    </div>
+
+    <!-- Botão Remover endereço -->
+    <div class="col-5 px-2 pt-4 p-0 m-0">
+      <a class="rounded-15 py-1 px-4 bg-white h-limited d-flex justify-content-between shadow-sm" (click)="removerEndereco(i)">
+        <h5 class="fw-normal my-auto text-truncate text-custom-dark ">Remover endereço</h5>
+      </a>
+    </div>
+
+  </div>
+
+
+  <!-- Final -->
+  <div class="row m-0 pb-4 mt-4 justify-content-end">
+
+    <!-- Botão Cadastrar outro endereço -->
+    <div class="col-5 px-2 p-0 m-0">
+      <a class="rounded-15 py-1 px-4 bg-white h-limited d-flex justify-content-between shadow-sm" (click)="adicionarEndereco()">
+        <h5 class="fw-normal my-auto text-truncate text-custom-dark ">Cadastrar outro endereço</h5>
+      </a>
+    </div>
+
+    <!-- Botão Salvar -->
+    <div class="col-4 d-grid px-2 p-0 m-0">
+      <button type="submit" class="btn rounded-15 py-3 px-4 bg-custom-success h-limited d-flex justify-content-between shadow-sm">
+        <h5 class="fw-normal my-auto text-truncate text-custom-dark ">Salvar</h5>
+      </button>
+    </div>
+
+  </div>
+</form>
