--- a/src/app/sistema/clientes/clientes.component.html
+++ b/src/app/sistema/clientes/clientes.component.html
@@ -19,7 +19,10 @@
         <div class="col-12">
           <ul class="nav nav-tabs fs-5 fw-lighter">
             <li class="nav-item px-1">
-              <a class="nav-link px-4" [class.active]="clienteSection == 'cadastro'" (click)="toggleClienteSection('cadastro')">Cadastro do cliente</a>
+              <a class="nav-link px-4" [class.active]="clienteSection == 'cadastro'" (click)="toggleClienteSection('cadastro')">Dados pessoais</a>
+            </li>
+            <li class="nav-item px-1">
+              <a class="nav-link px-4" [class.active]="clienteSection == 'venda'" (click)="toggleClienteSection('venda')">Dados para venda</a>
             </li>
             <li class="nav-item px-1">
               <a class="nav-link px-4" [class.active]="clienteSection == 'avaliacao'" (click)="toggleClienteSection('avaliacao')">Avaliação de crédito</a>
@@ -36,6 +39,10 @@
 
       <div *ngIf="clienteSection == 'cadastro'">
         <app-cadastrar-cliente></app-cadastrar-cliente>
+      </div>
+
+      <div *ngIf="clienteSection == 'venda'">
+        <app-dados-venda></app-dados-venda>
       </div>
 
       <div *ngIf="clienteSection == 'avaliacao'">
