updated avaliacao-credito page (cliente)

--- a/src/app/sistema/clientes/avaliacao-credito/avaliacao-credito.component.html
+++ b/src/app/sistema/clientes/avaliacao-credito/avaliacao-credito.component.html
@@ -60,24 +60,7 @@
   </div>
 </div>
 
-<div class="row m-0">
-
-  <!-- Liberar venda? -->
-  <div class="col-4 px-2 p-0 pt-4 m-0 d-flex justify-content-between align-self-center">
-    <h5 class="px-2 text-custom-dark fw-normal">Liberar venda?</h5>
-    <div class="form-check px-2">
-      <input class="form-check-input" type="radio" name="liberar" id="liberar1" checked>
-      <label class="form-check-label" for="liberar1">
-        Sim
-      </label>
-    </div>
-    <div class="form-check px-2">
-      <input class="form-check-input" type="radio" name="liberar" id="liberar2">
-      <label class="form-check-label" for="liberar2">
-        Não
-      </label>
-    </div>
-  </div>
+<div class="row m-0 justify-content-end">
 
   <!-- Limite de compra -->
   <div class="col-4 px-2 p-0 pt-4 m-0 form-floating">
