--- a/src/app/sistema/pedidos/listar-pedidos/listar-pedidos.component.html
+++ b/src/app/sistema/pedidos/listar-pedidos/listar-pedidos.component.html
@@ -21,7 +21,7 @@
 
         <!-- Botão Adicionar -->
         <div class="col-4 px-2 p-0 m-0">
-          <a class="rounded-15 py-1 px-4 bg-custom-success h-100 d-flex justify-content-between shadow-sm" data-bs-toggle="modal" data-bs-target="#adicionarPedido">
+          <a class="rounded-15 py-1 px-4 bg-custom-success h-100 d-flex justify-content-between shadow-sm" routerLink="/sistema/vendas/pedidos/criar">
             <h5 class="fw-normal my-auto text-truncate text-custom-dark ">Adicionar</h5>
             <i class="bi-plus my-auto fs-2 p-0 m-0 fw-bold text-custom-dark "></i>
           </a>
