added selecionar-produto modal (criar-pedido)

--- a/src/app/sistema/pedidos/criar-pedido/criar-pedido.component.html
+++ b/src/app/sistema/pedidos/criar-pedido/criar-pedido.component.html
@@ -126,7 +126,7 @@
             </div>
 
             <div class="d-grid pt-4 px-2">
-              <button type="button" class="h-limited btn rounded-15 py-1 px-4 bg-custom-success d-flex justify-content-between shadow-sm">
+              <button type="button" class="h-limited btn rounded-15 py-1 px-4 bg-custom-success d-flex justify-content-between shadow-sm" data-bs-toggle="modal" data-bs-target="#selecionarProdutos">
                 <h5 class="fw-normal my-auto text-truncate text-custom-dark">Adicionar produto</h5>
                 <i class="bi-plus my-auto fs-2 p-0 m-0 fw-bold text-custom-dark"></i>
               </button>
@@ -387,3 +387,5 @@
     </div>
   </div>
 </div>
+
+<app-selecionar-produtos-modal></app-selecionar-produtos-modal>
